<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutFragmentAddEditPowers"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/tableFeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:stretchColumns="0" >

            <TableRow
                android:id="@+id/tableRowFeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textFeats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/labelFeats"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
                
                <TextView
                    android:id="@+id/textAddFeats"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:paddingBottom="8dp"
                    android:paddingRight="4dp"
                    android:paddingTop="4dp"
                    android:text="@string/labelAdd" 
                    android:textStyle="bold"
                    android:typeface="serif" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/tableSkills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:stretchColumns="0" >

            <TableRow
                android:id="@+id/tableRowSkills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                
                 <TextView
                     android:id="@+id/textSkills"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="8dp"
                     android:paddingLeft="4dp"
                     android:paddingTop="8dp"
                     android:text="@string/labelSkills"
                     android:textSize="16sp" 
                     android:textStyle="bold"
                    android:typeface="serif" />
                 
                 <TextView
                     android:id="@+id/textAddSkills"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="right"
                     android:paddingBottom="8dp"
                     android:paddingRight="4dp"
                     android:paddingTop="8dp"
                     android:text="@string/labelAdd"
                     android:textSize="16sp" 
                     android:textStyle="bold"
                    android:typeface="serif" />
                 
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/tableLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:stretchColumns="0" >

            <TableRow
                android:id="@+id/tableRowLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                 
                  <TextView
                      android:id="@+id/textLanguages"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:paddingBottom="8dp"
                      android:paddingLeft="4dp"
                      android:paddingTop="8dp"
                      android:text="@string/labelLanguages"
                      android:textSize="16sp" 
                      android:textStyle="bold"
                    android:typeface="serif" />
                  
                  <TextView
                      android:id="@+id/textAddLanguages"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="right"
                      android:paddingBottom="8dp"
                      android:paddingRight="4dp"
                      android:paddingTop="8dp"
                      android:text="@string/labelAdd"
                      android:textSize="16sp" 
                      android:textStyle="bold"
                    android:typeface="serif" />
                  
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="vertical" >

        <TableLayout
            android:id="@+id/tableMagic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:stretchColumns="0" >

            <TableRow
                android:id="@+id/tableRowMagic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                  
                 <TextView
                     android:id="@+id/textMagic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="8dp"
                     android:paddingLeft="4dp"
                     android:paddingTop="8dp"
                     android:text="@string/labelMagic"
                     android:textSize="16sp" 
                     android:textStyle="bold"
                    android:typeface="serif" />
                 
                 <TextView
                     android:id="@+id/textAddMagic"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="right"
                     android:paddingBottom="8dp"
                     android:paddingRight="4dp"
                     android:paddingTop="8dp"
                     android:text="@string/labelAdd"
                     android:textSize="16sp" 
                     android:textStyle="bold"
                    android:typeface="serif" />
                 
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>